[gd_scene load_steps=8 format=3 uid="uid://bycrtqu7xh2h7"]

[ext_resource type="Texture2D" uid="uid://iadtiyou2kc3" path="res://assets/textures/cover.png" id="1_u7lul"]
[ext_resource type="Script" path="res://scenes/launcher/tile.gd" id="2_mhgyw"]

[sub_resource type="Animation" id="Animation_4p78t"]
resource_name = "A"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_o71r1"]
resource_name = "Hover"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Color(1.25, 1.25, 1.25, 1), Color(0.587751, 0.58775, 0.58775, 1)]
}

[sub_resource type="Animation" id="Animation_g3mdr"]
resource_name = "Hover"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.587751, 0.58775, 0.58775, 1)]
}

[sub_resource type="Animation" id="Animation_cnyv8"]
resource_name = "Unhover"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Color(0.587751, 0.587751, 0.58775, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vjrbu"]
_data = {
"A": SubResource("Animation_4p78t"),
"Click": SubResource("Animation_o71r1"),
"Hover": SubResource("Animation_g3mdr"),
"Unhover": SubResource("Animation_cnyv8")
}

[node name="TextureRect" type="TextureRect"]
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("1_u7lul")
expand_mode = 5
stretch_mode = 4
script = ExtResource("2_mhgyw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vjrbu")
}

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="mouse_entered" from="Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
